--- a/Makefile.am
+++ b/Makefile.am
@@ -7,10 +7,12 @@ MODULES_LDFLAGS = -fPIC -fno-stack-protector -avoid-version -module -shared -exp
 
 libdir = $(PAMDIR)
 
+SUBDIRS = ext/sds
+
 lib_LTLIBRARIES= pam_aad.la
 
 pam_aad_la_SOURCES = pam_aad.c
-pam_aad_la_LIBADD = -lcurl -ljansson -ljwt -lpam -lsds -luuid
+pam_aad_la_LIBADD = -lcurl -ljansson -ljwt -lpam -luuid $(SDS_LIBS)
 pam_aad_la_CFLAGS = $(AM_CFLAGS)
 pam_aad_la_LDFLAGS = $(AM_LDFLAGS) $(MODULES_LDFLAGS) -export-symbols-regex "^pam_sm_"
 
