--- a/debian/control
+++ b/debian/control
@@ -6,7 +6,7 @@ Standards-Version: 3.9.8
 Build-Depends:
  debhelper (>=9), libtool,
  libcurl4-openssl-dev, libjansson-dev, libjwt-dev,
- libpam0g-dev, libsds-dev, libssl-dev, pkg-config, uuid-dev
+ libpam0g-dev, libssl-dev, pkg-config, uuid-dev
 Vcs-Git: https://github.com/CyberNinjas/pam_aad.git
 Vcs-Browser: https://github.com/CyberNinjas/pam_aad
 Homepage: https://github.com/CyberNinjas/pam_aad
